# VTK_9.1.0

VTK-9.1.0/Remote/MomentInvariants/: CMakeLists.txt  README.md
VTK-9.1.0/Remote/MomentInvariants/MomentInvariants/: CMakeLists.txt  vtk.module  vtkComputeMoments.cxx  vtkComputeMoments.h  vtkMomentInvariantData.h  vtkMomentInvariants.cxx  vtkMomentInvariants.h  vtkMomentsFactor.cxx  vtkMomentsFactor.h  vtkMomentsGeneratorHelper.h  vtkMomentsHelper.cxx  vtkMomentsHelper.h  vtkMomentsIndex.cxx  vtkMomentsIndex.h  vtkMomentsPolynomial.cxx  vtkMomentsPolynomial.h  vtkMomentsProduct.cxx  vtkMomentsProduct.h  vtkMomentsTensor.h  vtkMomentsTensorSimple.cxx  vtkMomentsTensorSimple.h  vtkReconstructFromMoments.cxx  vtkReconstructFromMoments.h  vtkSimilarityBalls.cxx  vtkSimilarityBalls.h  vtkmComputeMoments.cxx
VTK-9.1.0/Remote/MomentInvariants/MomentInvariants/Testing/: CMakeLists.txt
VTK-9.1.0/Remote/MomentInvariants/MomentInvariants/Testing/Python/: CMakeLists.txt  TestUseGPU.py  patternDetectionHelper.py  patternDetectionTest.py  patternDetectionTestSimple.py  patternDetectionTestSimpleOutput.py  temp.py
VTK-9.1.0/Remote/MomentInvariants/ParallelMomentInvariants/: CMakeLists.txt  math_functions.hpp  vtk.module  vtkPComputeMoments.cxx  vtkPComputeMoments.h  vtkPMomentsHelper.cxx  vtkPMomentsHelper.h  vtkPSimilarityBalls.cxx  vtkPSimilarityBalls.h
VTK-9.1.0/Remote/MomentInvariants/ParallelMomentInvariants/Testing/: CMakeLists.txt
VTK-9.1.0/Remote/MomentInvariants/ParallelMomentInvariants/Testing/Python/: CMakeLists.txt  TestConvFFTComputeShort.py  TestParallelComputeShort.py  parallelPatternDetectionHelper.py
VTK-9.1.0/Remote/MomentInvariants/Testing/Data/Input/2DMatrix/: 2DMatrix_1_1.vti.sha512  2DMatrix_2_2.vti.sha512  2DMatrix_3_3.vti.sha512
VTK-9.1.0/Remote/MomentInvariants/dfftlib/: CMakeLists.txt  bare_fft.c  dfft_common.c  dfft_host.c  dfft_lib_config.h  vtk.module
save/: CMakeCache_20220712_00.txt  CMakeCache_20220712_01.txt
(+27 files in other folders)
