cmake_minimum_required(VERSION 3.8)
project (MomentInvariants)

# This lists file is ignored when built as part of VTK remote modules.
# Code can be added here to support standalone builds.
#
# find_package(VTK 8.9 REQUIRED)
#
# add_subdirectory(MomentInvariants)
# add_subdirectory(ParallelMomentInvariants)
